unpackaged/main/default/objects/litify_fin__lit_Item_Template__c/litify_fin__lit_Item_Template__c.object-meta.xml
<CustomObject>
    <description>Defines an object that is displayed in the financial summary.</description>
    <label>Item Template</label>
    <nameField>
        <label>Item Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>