unpackaged/main/default/objects/litify_fin__lit_Item_Template__c/fields/litify_fin__lit_Can_Create_Transactions__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Can_Create_Transactions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to determine whether or not transactions are permitted.</description>
    <label>Can Create Transactions</label>
    <type>Checkbox</type>
</CustomField>