unpackaged/main/default/objects/litify_fin__lit_Item_Template__c/fields/litify_fin__lit_Default_Account_Source__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Default_Account_Source__c</fullName>
    <description>Holds the default account value for an item for transaction mapping.</description>
    <label>Default Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>