unpackaged/main/default/objects/litify_fin__lit_Item_Template__c/fields/litify_fin__lit_Group_Template__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Group_Template__c</fullName>
    <description>The group this Item is a part of.</description>
    <label>Group Template</label>
    <referenceTo>litify_fin__lit_Group_Template__c</referenceTo>
    <relationshipLabel>Item Templates</relationshipLabel>
    <relationshipName>Item_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>