unpackaged/main/default/objects/litify_fin__lit_Item_Template__c/fields/litify_fin__lit_Hide_Criteria_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Hide_Criteria_Field__c</fullName>
    <description>The api name of the boolean field used to filter out records from the summary table.</description>
    <label>Hide Criteria Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>