unpackaged/main/default/objects/litify_fin__lit_Item_Template__c/fields/litify_fin__lit_Master_Object_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Master_Object_Lookup_Field__c</fullName>
    <description>The API name of the field that looks up to the master object. For example, if the master object is Matter__c, and this item is for Expense__c records, this field should be populated with the API name of the field on Expense__c that looks up to Matter__c.</description>
    <label>Master Object Lookup Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>