unpackaged/main/default/objects/litify_fin__lit_Item_Template__c/fields/litify_fin__lit_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Object_Name__c</fullName>
    <description>The API name of the object this item refers to.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>