unpackaged/main/default/objects/litify_fin__lit_Item_Template__c/fields/litify_fin__lit_Order__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Order__c</fullName>
    <description>Defines the position of this item in a Group on the Summary Card. 0 is the upper-most value.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>