unpackaged/main/default/objects/litify_fin__lit_Item_Template__c/fields/litify_fin__lit_Summary_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Summary_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to the field that acts as the summary field for this item, to be used when calculating financial summary totals.</description>
    <label>Summary Field</label>
    <referenceTo>litify_fin__lit_Field_Template__c</referenceTo>
    <relationshipLabel>Item Templates</relationshipLabel>
    <relationshipName>Item_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>